--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -10,26 +10,47 @@
     overflow-x: hidden;
 }
 
+#carouselExampleControls{
+    width: 95%;
+    max-width: 600px;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+}
 
-.card-home {
-    border-radius: 5px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width: 18rem;
+.carousel-inner {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-item {    
     -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.45);
     -moz-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.45);
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.45);
-    width: 95%;
-    max-width: 500px;
+    transition: all 0.5s;
+    width: 100%;
+    height: 100%;
 }
 
-.card-home img {
-    border-radius: 5px 5px 0px 0px;
-    max-width: 100%;
-    max-height: 100%;
+.card-img-top {
+   
 }
 
-.card-home .card-body {
+.carousel-title {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.443);
+    top: 30px;    
+    margin-left: 20%;
+    width: 60%;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+.carousel-item .card-body {
     text-align: left;
     font-family: 'Roboto', cursive;
 }
@@ -53,6 +74,5 @@
 }
 
 small {
-    float: right;
     opacity: 0.8;
 }
